refactor: 重构模组加载与压缩文件处理逻辑，迁移至Java 17+新特性
1.  将Pair类改为record简化实现，移除冗余代码
2.  替换commons-lang3为原生方法，升级toml4j至tomlj并新增chardet依赖
3.  使用ZipFileTree替代旧的ZipFileSystem处理压缩文件，优化编码检测
4.  重构多种模组元数据解析逻辑，统一使用ZipFileTree读取压缩包内文件
5.  新增LocalAddonFile与LocalAddonManager管理附加文件
6.  优化IO工具类，新增字符编码自动检测与流处理优化
7.  修复压缩文件路径调用错误，统一使用NIO Path替代File
8.  调整日志版权年份与代码格式化规范